syntax = "proto3";
package osmosis.incentives;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "osmosis/lockup/lock.proto";

option go_package = "github.com/c-osmosis/osmosis/x/incentives/types";

message Pot {
  uint64 id = 1; // unique ID of a Pot
  // Rewards are distributed to lockups that are are returned by at least one of these queries
  osmosis.lockup.QueryCondition distribute_to = 2 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin coins = 3
    [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"]; // can distribute multiple coins
  // distribution start time
  google.protobuf.Timestamp start_time = 4
    [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"start_time\""]; 
  uint64 num_epochs = 5; // number of epochs distribution will be done 
  uint64 filled_epochs = 6; // number of epochs distributed already
  repeated cosmos.base.v1beta1.Coin distributed_coins = 7
    [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"]; // already distributed coins
}
